--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-👋
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>New Baloora Website</title>
+</head>
+<body style="display: flex; justify-content: center;">
+    <h1>The New Baloora Website is Coming Soon!</h1>
+</body>
+</html>
